modyfikacja - linie pod naglowkami

--- a/1-projekt-sass/scss/base/_base.scss
+++ b/1-projekt-sass/scss/base/_base.scss
@@ -112,7 +112,9 @@ blackquote {
 }
 
 
-#counters-services {
-	width: 25px;
-	opacity: 50%;
-}
+
+
+// #counters-services {
+// 	width: 25px;
+// 	opacity: 50%;
+// }
