--- a/1-projekt-sass/scss/theme/_icon.scss
+++ b/1-projekt-sass/scss/theme/_icon.scss
@@ -23,8 +23,13 @@
 	        border-radius: 100%;
 	        line-height: $base-font-size * 4.5;
 	        color: $color-text-primary;
-	        margin: ($baseline * 2) auto $baseline;
+	        margin: auto;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 	    }
+
+
 	
 	    .icon-about-blue {
 			background-color: $color-primary;
