--- a/1-projekt-sass/scss/theme/_one-page.scss
+++ b/1-projekt-sass/scss/theme/_one-page.scss
@@ -142,7 +142,7 @@
                 background: $color-portfolio-hover;
                 -webkit-transition: all .35s;
                 -moz-transition: all .35s;
-                transition: all .35s;
+                transition: all 1s;
 
                 .portfolio-box-caption-content {
                     position: absolute;
