--- a/1-projekt-sass/css/main.css
+++ b/1-projekt-sass/css/main.css
@@ -11927,7 +11927,8 @@ form fieldset input[name="comment"], form fieldset input[name="message"] {
   opacity: 0;
   background: rgba(34, 34, 34, 0.8);
   -webkit-transition: all .35s;
-  transition: all .35s;
+  -webkit-transition: all 1s;
+  transition: all 1s;
 }
 
 .t108-one-page #portfolio .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
@@ -12557,16 +12558,7 @@ form fieldset input[name="comment"], form fieldset input[name="message"] {
   border-radius: 100%;
   line-height: 72px;
   color: #ffffff;
-  margin: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin: 48px auto 24px;
 }
 
 #icon-variants .about-columns .icon-about-blue {
