--- a/1-projekt-sass/scss/layout/_footer.scss
+++ b/1-projekt-sass/scss/layout/_footer.scss
@@ -5,7 +5,7 @@
 	background-color: $color-footer;
 
 	.footer-above {
-		padding-top: $baseline * 2;
+		padding-top: $baseline * 3 + 8;
 
 		.margin-none {
 
