--- a/1-projekt-sass/scss/frameworks/_bootstrap.scss
+++ b/1-projekt-sass/scss/frameworks/_bootstrap.scss
@@ -4379,7 +4379,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f8f8f8;
+  background-color: #f0f4dc;
   border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
