--- a/1-projekt-sass/css/main.css
+++ b/1-projekt-sass/css/main.css
@@ -83,6 +83,8 @@
 /*==========  1.1 - @import(s)  ==========*/
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700&subset=latin,latin-ext);
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,100italic,300italic,400italic,700italic&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap);
 /***/
 /*==========  1.2 - Fonts  ==========*/
 /***/
@@ -93,7 +95,6 @@
  */
 /* FONT PATH
  * -------------------------- */
-@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
 @font-face {
   font-family: 'FontAwesome';
   src: url("../fonts/font-awesome/fonts/fontawesome-webfont.eot?v=4.3.0");
