zmiana czcionki poprawka Raleway. _imports.scss

--- a/1-projekt-sass/scss/utilities/_settings.scss
+++ b/1-projekt-sass/scss/utilities/_settings.scss
@@ -14,6 +14,7 @@
 	$font-primary: "Lato Regular", Helvetica, sans-serif;
 	$font-secondary: "Lato Bold", Helvetica, sans-serif;
 	$font-third: "Archivo Black", sans-serif; 
+	$font-fourth-text: 'Raleway', sans-serif;
 	$text-transform-base: uppercase;
 	$baseline: $base-font-size * 1.5;
 
