--- a/1-projekt-sass/css/main.css
+++ b/1-projekt-sass/css/main.css
@@ -84,7 +84,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700&subset=latin,latin-ext);
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,100italic,300italic,400italic,700italic&subset=latin,latin-ext);
 @import url(https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Raleway:wght@100;200&display=swap);
 /***/
 /*==========  1.2 - Fonts  ==========*/
 /***/
@@ -10605,7 +10605,7 @@ body {
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
   color: #5b5b5b;
-  font-family: "Lato Regular", Helvetica, sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 body a, body input, body p {
@@ -10615,7 +10615,7 @@ body a, body input, body p {
 body h1, body h2, body h3, body h4, body h5, body h6 {
   text-transform: uppercase;
   color: #222222;
-  font-family: "Lato Bold", Helvetica, sans-serif;
+  font-family: "Archivo Black", sans-serif;
   margin-bottom: 24px;
   margin-top: 24px;
 }
@@ -10634,6 +10634,7 @@ body h3 {
 
 body h4 {
   font-size: 25px;
+  font-weight: bold;
 }
 
 body h5 {
@@ -10751,10 +10752,6 @@ header.header-image .header-content .header-content-inner h5 {
   font-size: 9.6px;
   margin-bottom: 12px;
   margin-top: 12px;
-}
-
-h1, h2, h3, h4 {
-  font-family: "Archivo Black", sans-serif;
 }
 
 @media (min-width: 768px) and (max-width: 992px) {
