--- a/1-projekt-sass/scss/utilities/_imports.scss
+++ b/1-projekt-sass/scss/utilities/_imports.scss
@@ -7,4 +7,4 @@
 
 // moje czcionki dodane. ZAbrane backticki.
 @import url(https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Raleway:wght@100;200&display=swap);
